--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
 
    <body>
       <div class="container">
-        <h2>API Project: File Metadata Microservice</h2>
+        <h2>API Project: My File Metadata Microservice</h2>
 
         <h3>Usage:</h3>
         <p>
@@ -26,8 +26,8 @@
       </div>
       <div class="footer">
         <p>
-          by 
-          <a href="http://www.freecodecamp.com">freeCodeCamp</a>
+          by <a href="https://github.com/SaidSuyv">Said Suybate</a> 
+          based on a project from <a href="http://www.freecodecamp.com">freeCodeCamp</a>
         </p>
       </div>
    </body>
